{
    "name": "ActionMap",
    "maps": [
        {
            "name": "PlayingScene",
            "id": "93f3b9d7-366e-45af-a0f6-a97ff9cb816e",
            "actions": [
                {
                    "name": "Lift",
                    "type": "Button",
                    "id": "b439cb2a-0a05-4263-bc3e-dd11a12487ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Glide",
                    "type": "Button",
                    "id": "407aa6c5-b600-476d-a905-3021356a4004",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shift_Left",
                    "type": "Button",
                    "id": "fe286289-8a5a-41e0-9f0a-772a655b65ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shift_Right",
                    "type": "Button",
                    "id": "776ffe74-7af0-4757-9c50-9c56085534be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "a2b7a44b-a25e-49e5-9617-37257a00ffcf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f6045acc-7df2-4bf4-b812-6cd064e86655",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6fdb8bce-40d5-481b-a408-6b4a64d89541",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61e5155b-c318-45c8-9d43-2e919217ecdf",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e429399-6f9e-461c-81f6-4b5eedf5a2cb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2ce8415-76f6-43df-be8b-8b1dc1757752",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Glide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05464467-882f-49d4-992f-39fffa492620",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Glide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f683c489-36e6-438e-bca5-bf64d9f3cca9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Glide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1696f755-d2dc-41ab-996f-0d7e0d55beec",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71c80152-8d69-4996-8d4b-8738bfa79ec1",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d757d4eb-7396-4fcd-8196-d9324289e6e1",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12069912-791e-4a2a-b7ef-ff2e7e16cce4",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PausingScene",
            "id": "03b14eb5-636a-424c-8a9d-84663c004dcc",
            "actions": [
                {
                    "name": "UnPause",
                    "type": "Button",
                    "id": "25c09903-5ceb-4688-879f-366e76064c28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aa57b109-445f-486c-a2ce-44a55c3be244",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MainMenuScene",
            "id": "fb23658d-81a6-4889-9aab-727de1be7190",
            "actions": [
                {
                    "name": "ClickStart",
                    "type": "Button",
                    "id": "1935615c-5df8-4dcf-aafd-c5995c00f7be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ClickQuit",
                    "type": "Button",
                    "id": "3ca7d7d2-f32b-4f32-964e-8c6b372ea978",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "39fff02a-c8a8-4341-bd1b-cddf0702d748",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58d8bd99-fd44-4dc7-b677-b973a26e2092",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickQuit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}